# VulkanEngine

./: CMakeLists.txt  Readme.md  main.cpp
include/: PhysicalDevice.hpp  Queue.hpp  Surface.hpp  Vertex.hpp  macroses.hpp  vk.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp  vk.cpp  vk_initialization.cpp  vk_usual copy  vk_usual.cpp
